gl33-master/src/test/deca/context/invalid/other/affectation_boolean_void.deca
// Invalid test
// Affectation d'un boolean à un void

{
   boolean b;
   void v;

   v = b;
   v = true;
   v = false;
}
